Updates from Overleaf

--- a/chap1-introduction.tex
+++ b/chap1-introduction.tex
@@ -11,7 +11,7 @@ Neutrinos were long thought to be massless, but results from the \gls{sk} collab
     \item The amount, if any, of \gls{cp} violation in the lepton sector.
     \item The absolute mass of the neutrinos.
     \item The neutrino mass hierarchy. 
-    \item The Dirac or Majorana nature of neutrinos. Since neutrinos are neutral particles, it is possible that they may be their own anti-particles (a Majorana particle), a property that would be unique to neutrinos. 
+    \item The Dirac or Majorana nature of neutrinos. Since neutrinos are neutral particles, it is possible that they may be their own antiparticles (a Majorana particle), a property that would be unique to neutrinos. 
     \item The possible existence of sterile neutrinos which are additional flavours of neutrinos that would only interact via gravity. 
 \end{itemize}
 The Majorana nature of neutrinos would allow for neutrinoless double beta decay, a process which does not conserve lepton number \cite{neutrinoless_double_beta_decay}. Sterile neutrinos have been hinted at by a number of experiments and are expected to have right-handed helicities which is in contrast to the active neutrinos which have all been observed to have left-handed helicities \cite{White_Paper}. The confirmation of either of these would give direct evidence of physics beyond the \gls{sm}. All of these questions are under active investigation by current and future neutrino experiments. 
