--- a/chap3-SBN_Program.tex
+++ b/chap3-SBN_Program.tex
@@ -197,7 +197,7 @@ $\mu^+$                   & $e^+ + \nue + \numubar$       & 100
 \end{table}
 
 \newpage
-A current of 174 kA is supplied to the magnetic horn in 143 $\mu$s pulses which corresponds to the frequency of the incident protons. The direction of the current may be reversed allowing for the focusing of positively or negatively charged particles. Since the charge of the decaying hadrons is linked to the type of neutrino produced, the ability to focus both positively and negatively charged particles allows the \gls{bnb} to run in neutrino or antineutrino mode \cite{BNB_flux}. Pions are the primary particle produced from the incident protons hence the \gls{bnb} is muon (anti-)neutrino dominated. The percentage neutrino flavour composition of the \gls{bnb} is given in \TableRef{Table: BNB composition} for both neutrino and antineutrino mode.
+A current of 174 kA is supplied to the magnetic horn in 143 $\mu$s pulses which corresponds to the frequency of the incident protons. The direction of the current may be reversed allowing for the focusing of positively or negatively charged particles. Since the charge of the decaying hadrons is linked to the type of neutrino produced, the ability to focus both positively and negatively charged particles allows the \gls{bnb} to run in neutrino or antineutrino mode \cite{BNB_flux}. Pions are the primary particle produced from the incident protons hence the \gls{bnb} is muon (anti)neutrino dominated. The percentage neutrino flavour composition of the \gls{bnb} is given in \TableRef{Table: BNB composition} for both neutrino and antineutrino mode.
 
 
 \begin{table}[h]
@@ -212,7 +212,7 @@ $\nuebar$    & 0.05                & 0.4
 \label{Table: BNB composition}
 \end{table}
 
- The neutrino flux of the BNB was simulated by the MiniBooNE collaboration for both neutrino and antineutrino mode \cite{BNB_flux}. The flux of the electron and muon (anti-)neutrinos in each of the three \gls{sbn} detectors is shown in \FigureRef{fig: SBN flux}.
+ The neutrino flux of the BNB was simulated by the MiniBooNE collaboration for both neutrino and antineutrino mode \cite{BNB_flux}. The flux of the electron and muon (anti)neutrinos in each of the three \gls{sbn} detectors is shown in \FigureRef{fig: SBN flux}.
  \begin{figure}[h!]
      \centering
      \includegraphics[width = \textwidth]{figures-chap3/SBN_flux.png}
