--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -1,7 +1,7 @@
 \chapter{Sterile Neutrino Oscillation Inputs Within SBN}
 \label{chap:osc_inputs}
 
-In order to perform an oscillation analysis, a number of inputs and analysis choices are required. Typically this involves generating some event sample in each detector for a given analysis, applying a physics hypothesis and some set of systematic uncertainties. A fit comparing the observed and predicted event rate is then performed giving the confidence level of the applied physics hypothesis. This is summarised in \FigureRef{fig:analysis_paradigm} which shows the generic overview of the procedure coupled with the different components. Many of these items are common to all oscillation analyses and are agnostic to the fitting framework. The remainder of this chapter gives details of the VALOR neutrino fitting framework which is used to perform the oscillation analysis in this thesis, highlights some of the key inputs to the analysis and details some of the decisions that were made. The actual analysis results are discussed in \ChapterRef{chap:VALOR}.
+In order to perform an oscillation analysis, a number of inputs and analysis choices are required. Typically this involves generating some event sample in each detector for a given analysis, applying a physics hypothesis and some set of systematic uncertainties. A fit comparing the observed and predicted event rate is then performed giving the confidence level of the applied physics hypothesis. This is summarised in \FigureRef{fig:analysis_paradigm} which shows the generic overview of the procedure coupled with the different components. Many of these items are common to all oscillation analyses and are agnostic to the fitting framework. The remainder of this chapter highlights some of the key inputs to the oscillation analysis along with some of the decisions that were made. The actual analysis results are detailed in \SectionRef{chap:VALOR} in addition to explaining how the VALOR framework processes or consumes these inputs where appropriate.
 
 \begin{figure}[!h]
     \centering
@@ -9,54 +9,6 @@ In order to perform an oscillation analysis, a number of inputs and analysis cho
     \caption[SBN Oscillation analysis paradigm.]{Overview of the SBN oscillation analysis paradigm. A given model for the neutrino oscillation, detector, neutrino flux and neutrino cross-section are combined with the appropriate data to give the prediction for the respective detector. Individual detector predictions may be combined to give an overall \gls{sbn} prediction. }
     \label{fig:analysis_paradigm}
 \end{figure}
-
-\section{The VALOR Framework}\label{sec:VALOR_framework}
-The VALOR framework is a neutrino fitting framework that was first developed for the \gls{t2k} experiment but has since been adapted to also cover, Hyper-Kamiokande, \gls{dune} and the \gls{sbn} program \cite{VALOR}.
-
-Performing an analysis within VALOR involves a number of physics parameters that define a physics hypothesis (e.g. neutrino oscillations) and the relevant systematic uncertainties. Event rate predictions are constructed for the associated detector, beam and event sample. These predictions are constructed as a function of a kinematical variable for either a nominal scenario or with variations due to a physics hypothesis and/or systematic uncertainties. This approach allows for joint oscillation and systematic fits to be constructed from a binned likelihood fitting approach for a given event topology. Fits may be performed for individual detectors or for a combination of multiple detectors and may include any number of systematic uncertainties. 
-
-
-
-The data inputs used for an oscillation analysis are mainly provided in the form of \glspl{mct}, which provide a mapping between true and reconstructed variables. They are constructed following the full event processing chain which includes event simulation, reconstruction and selection. Since the \glspl{mct} include the effects from reconstruction and selection, it is not feasible to directly recreate them using only information on the flux, cross-section and efficiency. These \glspl{mct}, \textit{T}, encapsulate a number of quantities describing a given event and are listed below,
-
-\begin{itemize}
-    \item[b] -- Beam configuration e.g. neutrino or antineutrino mode,
-    \item[d] -- Detector e.g. \gls{sbnd}, \gls{microboone} or \gls{icarus},
-    \item[s] -- Topological event selection e.g. \nue\gls{cc}-inclusive, \numu\gls{cc}-inclusive,
-    \item[m] -- True Reaction Mode e.g. \numu~\gls{ccqe}, \nue~\gls{cc} 1$\pi^{\pm}$,
-    \item[r] -- A bin in multi-dimensional reconstructed kinematic space e.g. $E_{\nu, reco}$,
-    \item[t] -- A bin in multi-dimensional true kinematic space e.g. $E_{\nu, true}$,
-\end{itemize}
-
-with $T = T_{d;b;s;m}(r, t)$. By combining \textit{T} with the necessary physics parameters, $\vec{\theta}$, and systematic parameters, $\vec{f}$, the predicted event rate, $n^{pred}_{d;b;s}$, may be expressed as
-\begin{equation}
-n_{d;b;s}^{pred}(r; \vec{\theta}; \vec{f}) =
-   \sum_{m} \sum_{t}  P_{d;b;m}(t; \vec{\theta}) \cdot R_{d;b;s;m}(r,t; \vec{f}) \cdot T_{d;b;s;m}(r,t) \cdot N^{MC},
-   \label{eq:valor_npred}
-\end{equation}
-where $P_{d;b;m}(t; \vec{\theta})$ represents the effect due to a physics hypothesis, $R_{d;b;s;m}(r,t; \vec{f})$ represents the response of a \gls{mct} bin to the systematic variations and $N^{MC} = \mbox{POT}_{b;d}^{data}/\mbox{POT}_{b;d}^{MC}$, which is the normalisation by which to scale the event rate to account for the POT which was used to construct the sample of neutrino events with respect to the nominal POT in the analysis. The variation due to systematic parameters is applied separately to each combination of beam, detector, topological selection and reaction mode in true-reconstructed space and is, therefore, dependant on, \textit{b, d, s} and \textit{m}. The dependence of $P_{d;b;m}(t; \vec{\theta})$ on \textit{d} and \textit{b} is due to \textit{d} and \textit{b} encapsulating the baseline information which is a component of the oscillation probability. The unoscillated \gls{cc} \glspl{mct} are weighted by the appropriate oscillation probability, $P_{\nu_{\alpha} \rightarrow \nu_{\beta}}$, to reflect the change in event rate due to neutrino oscillations. The \gls{nc} \glspl{mct} are left unweighted since they remain unchanged due to flavour oscillations. This distinction between \gls{cc} and \gls{nc} is encapsulated by \textit{m}, hence, $P_{d;b;m}(t; \vec{\theta})$ is required to also be dependent on \textit{m}. 
-
-For $n_{d ; b ; s}^{obs}(r)$ observed events, the log likelihood, $\lnOf{\lambda_{d;b;s}(\vec \theta, \vec f)}$, is given by
-\begin{equation}
-    \lnOf{\lambda_{d;b;s}(\vec \theta, \vec f)} = - \mathlarger{\mathlarger{\sum_{b,d,s,r}}} \Bigg \{ \Big (n_{d;b;s}^{pred}(r,\vec{\theta},\vec{f})
-    - n_{d ; b ; s}^{obs}(r) \Big) + n_{d ; b ; s}^{obs}(r) \cdot \lnOf{\frac{n_{d ; b ; s}^{obs}(r)}{n_{d ; b ; s}^{p r e d}(r , \vec{\theta} , \vec{f})}} \Bigg \}.
-\end{equation}
-An additional term is applied to penalise deviations from the nominal values of systematic parameters which is defined as,
-\begin{equation}
-    \lnOf{\lambda_{syst}(\vec{f})} = -\frac{1}{2} (\vec{f} - \vec{f}_0)^T \mathbf{V^{-1}} (\vec{f} - \vec{f}_0),
-\end{equation}
-where $\vec{f}_0$ is a vector containing the nominal value of all the systematic parameters and \textbf{V} is a covariance matrix containing the uncertainties of the systematic parameters \cite{VALOR_dune}. 
-
-In the limit of large statistics, quantities of the form $-2\lnOf{\lambda}$ have a $\chi^2$ distribution, hence calculating the log-likelihood allows a goodness-of-fit test to be performed \cite{introduction_to_mathematical_statistics_book}. The total goodness-of-fit value is therefore given by,
-\begin{equation}
-    \chi^2_{tot} = -2(\lnOf{\lambda_{d;b;s}(\vec{\theta}, \vec{f})} + \lnOf{\lambda_{syst}(\vec{f})}).
-\end{equation}
-
-In order to create confidence regions, fits are performed between a certain \textit{Asimov} dataset and $n_{d;b;s}^{pred}$. The Asimov dataset is a dataset where all systematic parameters are set to their nominal values and serves as a proxy for data in cases where only simulations are considered. It has been shown that in the same limit as the $\chi^2$ approximation (in the limit of large statistics), the median of many toy \gls{mc} experiments is equivalent to the Asimov dataset. This allows the significance of a given hypothesis to be compared to the median one whilst only requiring one \textit{toy} experiment instead of needing to compute many toy \gls{mc} experiments \cite{Asimov_dataset}. Two types of confidence regions may be constructed; an \textit{exclusion} region and an \textit{allowed} region. Both regions show the area where the chosen model is either compatible or incompatible with the data. The difference is due to the input data which has either no oscillation signal (an exclusion region) or there is an injected signal (an allowed region). In the case of exclusion regions, the Asimov dataset corresponds to the case where no oscillations are observed which is the null-hypothesis and for allowed regions, the oscillation parameters are set to that of the injected signal. %For the \glspl{mct}, the oscillation parameters are set to a given value and the systematic parameters, if any, are allowed to float.
-
-
-
-
 
 \section{Monte Carlo Event Production}
 
@@ -148,70 +100,6 @@ A largely separate analysis is applied for cosmic events which is as follows:
     \item A topological cosmic cylinder cut is applied to cosmic photons which originate from cosmic muons that pass through the TPC. These can be removed by a fiducial volume cut corresponding to a cylinder of radius 15 cm around the cosmic muon \cite{Dom's_thesis}. 
 \end{enumerate}
 
-\section{Reaction Modes}
-The reaction modes define the topology of neutrino interactions. Categorising neutrino events is a requirement for handling systematic uncertainties since these are reaction mode dependent. The reaction modes are grouped into two sets\footnote{The \gls{cc} QE 0\pi mode is sometimes simply written as \gls{cc} QE.}: the \textit{fine} reaction modes which outline the complete list of all possible reaction modes and the \textit{coarse} reaction modes which define a broader class of interaction which encompass one or more fine reaction mode. The fine reaction modes are listed in \TableRef{table:fine_reac_modes} and are typically used at the analysis level. The coarse reaction modes used depend on the analysis channel and are listed in \TableRef{table:coarse_reac_modes}. They are usually only used when displaying data such as in a breakdown of event rate spectra since using the complete list of reaction modes would be impractical. 
-
-% Fine reaction modes
-\begin{table}[t!]
-  \renewcommand{\arraystretch}{1.6}
-  \begin{tabular}{>{\centering\arraybackslash}m{4cm} 
-                  >{\centering\arraybackslash}m{4cm}
-                  >{\centering\arraybackslash}m{4cm}}
-  
-    \toprule
-    \multicolumn{3}{c}{\textit{Fine Reaction Modes}} \\
-    $\numu$, $\numubar$ & $\nue$, $\nuebar$ & $\numu \rightarrow \nue, \numubar \rightarrow \nuebar$ \\
-    \midrule
-    CC QE 0\pi                     & CC QE 0\pi                    & CC QE 0\pi \\
-    NC~Elastic                 & NC~Elastic                & CC 2p2h\\ 
-    CC, NC 2p2h                 & CC, NC 2p2h                & CC 1$\pi^{\pm}$ \\  
-    CC, NC 1$\pi^{\pm}$        & CC, NC 1$\pi^{\pm}$       & CC 1$\pi^{0}$ \\   
-    CC, NC 1$\pi^{0}$          & CC, NC 1$\pi^{0}$         & CC 2$\pi^{\pm}$ \\   
-    CC, NC 2$\pi^{\pm}$        & CC, NC 2$\pi^{\pm}$       & CC 2$\pi^{0}$ \\   
-    CC, NC 2$\pi^{0}$          & CC, NC 2$\pi^{0}$         & CC Coh \\   
-    CC, NC $\pi^{\pm}\pi^{0}$  & CC, NC $\pi^{\pm}\pi^{0}$ & Elastic Scattering \\   
-    CC, NC Coh                 & CC, NC Coh                & CC Other \\  
-    CC, NC Elastic Scattering  & CC+NC Elastic Scattering  \\  
-    NC 1$\gamma$               & NC 1$\gamma$              \\  
-    CC, NC Other               & CC, NC Other              \\  
-    \hdashline
-    \multicolumn{3}{c}{\textit{Cosmic \& Dirt}} \\
-    \bottomrule
-
-  \end{tabular}
-  \caption[Fine Reaction Modes.]{The complete list of reaction modes considered in an \gls{sbn} analysis. The \gls{2p2h} mode is defined as having a charged lepton + 2 nucleon topology distinguishing it from the other topologies.}
-  \label{table:fine_reac_modes}
-\end{table}
-
-
-% Coarse reaction modes
-\begin{table}[t!]
-  \begin{tabular}{>{\centering\arraybackslash}m{4cm} 
-    >{\centering\arraybackslash}m{4cm}}
-  
-    \toprule
-    \multicolumn{2}{c}{\textit{Coarse Reaction Modes}} \\
-    \numu, \numubar & \nue, \nuebar              \\
-    \midrule
-    \numu CC QE 0\pi     & \nue CC QE 0\pi       \\ 
-    \numu CC 2p2h        & \nue CC 2p2h          \\ 
-    \numu CC 1$\pi$      & \nue CC 1$\pi$        \\ 
-    \numu CC 2$\pi$      & \nue CC 2$\pi$        \\ 
-    \numu CC Other       & \nue CC Other         \\ 
-    \numubar CC          & \nuebar CC            \\
-    \nue \& \nuebar CC & \numu CC                \\
-    NC                     & \numubar CC         \\
-    \textit{Cosmic}        & Oscillated \nue CC  \\
-    \textit{Dirt}          & NC 0\pi             \\
-                           & NC Other            \\
-                           & \textit{Cosmic}     \\
-                           & \textit{Dirt}       \\
-    \bottomrule
-
-  \end{tabular}
-  \caption[Coarse Reaction Modes.]{The \textit{coarse} reaction modes used for both the \numu and \nue channels. These are a broader definition of the reaction modes where one or more of the \textit{fine} reaction modes listed in \TableRef{table:fine_reac_modes} would come under the umbrella of a given coarse reaction mode.}
-  \label{table:coarse_reac_modes}
-\end{table}
 
 \clearpage
 \section{Systematic Uncertainties}\label{sec:syst_uncertainties}
@@ -629,133 +517,4 @@ Since the energy scale systematic is a global one, it is applied across all ener
 
 \end{comment}
 
-\section{Other Analysis Choices}
-
-Two other key analysis choices are the neutrino baseline parameterisation and the binning scheme used for the kinematic variable. As is shown in \EquationRef{eqn:sterile_osc_prob}, the baseline is one of the components that drives the oscillation probability and therefore any approximations to the true baseline must be chosen such that the impact to the oscillation probability is negligible. The kinematic variable used in this analysis is the energy of the neutrino for both true and reconstructed quantities.
-
-\subsection{Baseline}
-For long baseline experiments, it is not uncommon for fitting frameworks to simply use some average value for the baseline since factors such as the interaction point in the detector or the position at which a particle decays into a neutrino would only change the average baseline for the experiment by a negligible amount. However, for short baseline experiments such as \gls{sbn}, these factors may change the baseline significantly, up to around 20\% in \gls{sbnd}. 
-
-In an attempt to minimise computing resources, the true baseline was not initially used, but instead, several approximations to the baseline were tried. To begin with, the average baseline of each \gls{sbn} detector was used for all neutrino energies. This was calculated from the true baseline distribution of \numu events in each detector which are shown in \FigureRef{fig:numu_baseline}. Secondly, a 4-knot spline (named spline V1) for each detector was defined in order to try and better approximate the baseline. This method was improved upon by producing a spline for each of the true energy bins (named spline V2) which are defined in \SectionRef{sec:binning}. In order to establish the impact of any baseline approximations on the oscillation probability, the oscillation probability was plotted as a function of true neutrino energy with the oscillation parameters $\sin^2{2\theta_{\mu\mu}} = 0.01$ and $\Delta m^2_{41} = 50$ eV$^2$. This oscillation point was chosen to ensure that a region where rapid oscillations occur was being investigated, which would highlight the effect of any baseline choices. The oscillation probabilities as a function of energy are shown in \FigureRef{fig:baseline_osc_probability} for the four different baselines described. It was eventually decided that any approximation would be insufficient and that the true baseline should be used. 
-
-The studies of the baseline approximations were done in the context of the \numu disappearance channel. In principle, within the \nue sample, different approximations should be applied to the different sub-samples since the baseline distribution is not the same for all the sub-samples. For example, the \numu's in the oscillated and \numu sub-samples will both mainly be the result of pion decays whereas the \nue's in the intrinsic sub-sample will have a larger contribution from kaon and secondary muon decays. Pions and kaons have different lifetimes which coupled with the contribution from the decay of secondary particles means that the baseline distribution of the oscillated and \numu sub-sample will be different to that of the intrinsic \nue sub-sample. This was never done since it was decided that the true baseline should be used. The baseline distributions for the intrinsic \nue, oscillated $\nu$ and the overall \nue sample from combining all the sub-samples together are shown in \FigureRef{fig:nue_intrinsic_baseline}, \FigureRef{fig:nue_osc_baseline} and \FigureRef{fig:nue_baseline} respectively for each of the \gls{sbn} detectors. It should be noted that the baseline distributions for oscillated \nue sample from \FigureRef{fig:nue_osc_baseline} and the \numu sample from \FigureRef{fig:numu_baseline} are comparable. This is due to the initial parameters describing the oscillated sample being the same as for the \numu sample. The only difference being the neutrino oscillations from \numu to \nue which is not something that affects the baseline.
-
-\begin{comment}
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width = 0.32\textwidth]{figures-chap5/SBND_numu.pdf}
-    \includegraphics[width = 0.32\textwidth]{figures-chap5/MicroBooNE_numu.pdf}
-    \includegraphics[width = 0.32\textwidth]{figures-chap5/ICARUS_numu.pdf}
-    \caption{The baseline distribution of events in the \numu sample for each of the \gls{sbn} detectors.}
-    \label{fig:numu_baseline}
-\end{figure}
-\end{comment}
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/SBND_numu.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/MicroBooNE_numu.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/ICARUS_numu.pdf}
-    \captionsetup{width=0.45\textwidth}
-    \parbox[b]{0.49\textwidth}%
-  {
-    \caption{The baseline distribution of events in the \numu sample for each of the \gls{sbn} detectors. \\\phantom{.}\\}
-    \label{fig:numu_baseline}}
-\end{figure}
-
-
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/SBND_intrinsic_nue.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/MicroBooNE_intrinsic_nue.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/ICARUS_intrinsic_nue.pdf} 
-    \captionsetup{width=0.45\textwidth}
-    \parbox[b]{0.49\textwidth}%
-    {
-    \caption{The baseline distribution of events in the intrinsic \nue sample for each of the \gls{sbn} detectors. \\\phantom{.}\\}
-    \label{fig:nue_intrinsic_baseline}
-    }
-  \end{figure}
-  
-  \begin{figure}
-    \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/SBND_osc.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/MicroBooNE_osc.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/ICARUS_osc.pdf}
-    \captionsetup{width=0.45\textwidth}
-    \parbox[b]{0.49\textwidth}%
-    {
-    \caption{The baseline distribution of events in the oscillated $\numu \rightarrow \nue$ sample for each of the \gls{sbn} detectors. \\\phantom{.}\\}
-    \label{fig:nue_osc_baseline}
-    }
-  \end{figure}
-  
-  \begin{figure}
-    \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/SBND_nue.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/MicroBooNE_nue.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/ICARUS_nue.pdf}
-    \captionsetup{width=0.45\textwidth}
-    \parbox[b]{0.49\textwidth}%
-    {
-    \caption[The overall \nue baseline distributions.]{The baseline distribution of events in the overall \nue sample which is comprised of events from the intrinsic \nue, oscillated $\nu$, the \numu events from passing the \nue selection and the dirt and cosmic samples (which are not explicitly shown) for each of the \gls{sbn} detectors.}
-    \label{fig:nue_baseline}
-    }
-\end{figure}
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/osc_prob_sbnd.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/osc_prob_uboone.pdf}
-    \includegraphics[width = 0.49\textwidth]{figures-chap5/osc_prob_icarus.pdf}
-    \captionsetup{width=0.45\textwidth}
-    \parbox[b]{0.49\textwidth}%
-    {
-    \caption[Oscillation probability for different baseline parametrisations.]{The oscillation probability as a function of true neutrino energy for the \numu disappearance sample with oscillation parameters $\sin^2{2\theta_{\mu\mu}} = 0.01$ and $\Delta m^2_{41} = 50$ eV$^2$ in each \gls{sbn} detector. The results from using each baseline parametrisation are shown. \\}
-    \label{fig:baseline_osc_probability}}
-\end{figure}
-
-\clearpage
-\subsection{Binning}\label{sec:binning}
-The energy binning schemes used are the same across each of the three detectors, however, the scheme used is different for the \numu and \nue analyses. Furthermore, there are separate schemes for both the true and reconstructed energies. Each of the binning schemes is outlined below. 
-
-The \numu edge-to-edge binning has 21 bins in reconstructed neutrino energy which are bounded as follows:
-\begin{itemize}
-    \item 1 bin from 0.00-0.20 GeV,
-    \item 2 0.10-GeV bins from 0.20-0.40 GeV,
-    \item 12 0.05-GeV bins from 0.40-1.00 GeV,
-    \item 2 0.25-GeV bins from 1.00-1.50 GeV,
-    \item 3 0.50-GeV bins from 1.50-3.00 GeV and
-    \item 1 bin from 3.00-10.00 GeV.
-\end{itemize}
-
-The \numu edge-to-edge binning has 22 bins in true neutrino energy which are bounded as follows:
-\begin{itemize}
-    \item 1 bin from 0.00-0.30 GeV,
-    \item 3 0.10-GeV bins from 0.30-0.60 GeV,
-    \item 12 0.05-GeV bins from 0.60-1.20 GeV,
-    \item 1 bin from 1.20-1.50 GeV,
-    \item 3 0.50-GeV bins from 1.50-3.00 GeV,
-    \item 1 bin from 3.00-5.00 GeV and
-    \item 1 bin from 5.00-10.00 GeV.
-\end{itemize}
-
-The \nue edge-to-edge binning has 12 bins in reconstructed neutrino energy which are bounded as follows:
-\begin{itemize}
-    \item 1 0.35-GeV bin from 0.00-0.35 GeV,
-    \item 5 0.15-GeV bins from 0.35-1.10 GeV,
-    \item 2 0.20-GeV bins from 1.10-1.50 GeV,
-    \item 2 0.25-GeV bins from 1.50-2.00 GeV,
-    \item 1 bin from 2.00-3.00 GeV and
-    \item 1 bin from 3.00-10.00 GeV.
-\end{itemize}
-
-The \nue edge-to-edge binning has 33 bins in true neutrino energy which are bounded as follows:
-\begin{itemize}
-    \item 2 0.25-GeV bin from 0.00-0.50 GeV,
-    \item 15 0.05-GeV bins from 0.50-1.25 GeV,
-    \item 15 0.25-GeV bins from 1.25-5.00 GeV and
-    \item 1 bin from 5.00-10.00 GeV.
-\end{itemize}
 
